example of a potential implementation of schedule section

--- a/610/hugo.toml
+++ b/610/hugo.toml
@@ -3,6 +3,9 @@ languageCode = 'en-us'
 title = 'SWEN-610'
 theme = 'book'
 
+[markup.goldmark.renderer]
+  unsafe = true
+
 [params]
   BookComments = false
 
