--- a/640/hugo.toml
+++ b/640/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'SWEN 640'
 theme = 'book'
 
 [markup.goldmark.renderer]
