initial schedule page setup

--- a/601/hugo.toml
+++ b/601/hugo.toml
@@ -1,10 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'SWEN-'
-theme = 'book'
+title = 'SWEN-601'
 
 [markup.goldmark.renderer]
   unsafe = true
-
-[params]
-  BookComments = false
